added ihover buttons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Ice-Cream</title>
 	<meta name="viewport" content="width=device-width, initial-scale-1">
+	<link rel="stylesheet" href="css/ihover.css">
+	<link rel="stylesheet" href="css/ihover.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/font-awesome-4.3.0/css/font-awesome.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
@@ -28,7 +30,8 @@
 			<div class="col-md-6">
 				<h1>Genuine 1980's Ice-Cream</h1>
 			</div>
-			<div class="col-md-6">
+<!-- nav -->
+			<div class="hidden-sm hidden-xs col-md-6">
 					<ul class="nav">
 						<li>
 							<input class="btn" type="button" value="1 Scoop">
@@ -42,8 +45,9 @@
 					</ul>
 			</div>
 		</div> <!-- end row -->
+<!-- aside -->
 		<div class="row">
-			<div class="col-sm-2 col-sm-offset-1 aside">
+			<div class="hidden-xs col-sm-2 col-sm-offset-1 aside">
 				<h2>Flavors</h2>
 				<ul>
 					<li><a href="#">Vanilla</a></li>
@@ -61,15 +65,46 @@
 					<figcaption>Riding my FJR</figcaption>
 				</figure>
 			</div>
+<!-- main body -->
 			<div class="col-sm-9 main">
-				<h2>Random Thoughts...</h2>
-				<p>Dear Millionaires, if you don't have a bookshelf that spins into another room, give me you money because you're spending it wrong.</p>
-				<p>A recent study has found that women who carry a little extra weight live longer than the men who mention it</p>
-				<p>"The trouble with quotes on the Internet is that you can never know if they are genuine." - <i>Abraham Lincoln</i></p>
-				<p>Today, I texted all my friends telling them that i lost my phone and asked them to call it for me. They all called. I need smarter friends.</p>
-				<p>Based on how I react when toast pops out of the toaster, I will never look cool walking away from an explosion.</p>
-				<p>I never run with scissors.<br> Those last two words words were unnecessary.</p>
-				<p>I didn't mean to push your buttons, I was just looking for the mute!</p>
+				<h2>Inspirational Quotes</h2>
+				<p>"When I'm not longer rapping, I want to open up an ice cream parlor and call myself Scoop Dogg." <i>Snoop Dogg</i></p>
+				<p>"... <i>everyone</i> knows that ice-cream is worth the trouble of being cold. Like all things virtuous, you have to suffer to gain reward." <i>Brandon Sanderson</i></p>
+				<p>"Tomorrow we can eat brocoli, but today is for ice-cream!" <i>Mallory Hobsen</i> age 9</p>
+				<p>"Without ice-cream, there would be darkness and chaos." <i>Don Kardong</i>"</p>
+				<p>"Not to like ice cream is to show oneself uninterested in food." <i>Joseph Epstein</i></p>
+				<p>"If I could lick the sunset, I'll bet it tastes like Neapolitan ice-cream." <i>Jarod Kintz</i></p>
+				<p>"[I]t was the color of someone buying an ice-cream cone for no reason at all." <i>Lemony Snicket</i></p>
+				<p>"They say REVENGE is a dish best served cold. They also say REVENGE is sweet. This means, basically REVENGE is ICE-CREAM." <i>Unknown</i></p>
+				<p>"I go running when I have to. When the ice-cream truck is doing sixty." <i>Wendy Liebman</i></p>
+			</div>
+		</div>
+<!-- ihover buttons -->
+		<div class="row">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-3">
+				<div class="ih-item circle effect16 right_to_left"><a href="#">
+				<div class="img"><img src="img/vanilla.jpg" alt="img"></div>
+				<div class="info">
+					h3>Vanilla</h3>
+					<p>How many scoops?</p>
+				</div></a></div>
+			</div>
+		 	<div class="col-sm-3">
+		    	<div class="ih-item circle effect16 right_to_left"><a href="#">
+				<div class="img"><img src="img/chocolate.jpg" alt="img"></div>
+				<div class="info">
+					<h3>Chocolate</h3>
+					<p>How many scoops?</p>
+				</div></a></div>
+			</div>
+			<div class="col-sm-3">
+				<div class="ih-item circle effect16 right_to_left"><a href="#">
+				<div class="img"><img src="img/strawberry.jpg" alt="img"></div>
+				<div class="info">
+					<h3>Strawberry</h3>
+					<p>How many scoops?</p>
+				</div></a></div>
 			</div>
 		</div>
 		<div class="row footer">
@@ -78,5 +113,6 @@
 			</div>
 		</div>
 	</div> <!-- end container -->
+
 </body>
 </html>
