--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<div class="ih-item circle effect16 right_to_left"><a href="#">
 				<div class="img"><img src="img/vanilla.jpg" alt="img"></div>
 				<div class="info">
-					h3>Vanilla</h3>
+					<h3>Vanilla</h3>
 					<p>How many scoops?</p>
 				</div></a></div>
 			</div>
@@ -107,6 +107,7 @@
 				</div></a></div>
 			</div>
 		</div>
+<!-- footer -->
 		<div class="row footer">
 			<div class="col-md-12">
 				<p>&copy; <span class="up">Brian</span> <span class="down">Lovik,</span> <span class="up">2015</span></p>
